# Deepgram_Voice_Agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  client.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
common/: agent_functions.py  agent_templates.py  business_logic.py  meeting_modular.py  prompt_templates.py
docs/: API.md  DEPLOYMENT.md
knowledgebase/: README.md  mdx_handler.py
knowledgebase/mdx/: board_of_directors.mdx  client_collaborations.mdx  company_overview.mdx  contact_information.mdx  faqs.mdx  industries_served.mdx  key_services.mdx  leadership_team.mdx  recognition_awards.mdx  social_impact.mdx  where_we_operate.mdx  why_choose_indivillage.mdx  why_choose_techflow.mdx  workforce_capacity.mdx
templates/: index.html
tests/: conftest.py
tests/integration/: test_voice_agent.py
tests/unit/: test_agent_functions.py  test_business_logic.py
